--- a/src/App.css
+++ b/src/App.css
@@ -8,9 +8,12 @@
   --footer-text-color: #888;
   --starfield-bg-color: #f0f0f0; /* Light mode background for Starfield */
   --star-color: #000; /* Light mode star color */
+  --card-color: rgba(22, 22, 23, 0.733);
+  --git-img-bg-color: black;
+  --gitbg-color: black;
 }
 
-[data-theme='dark'] {
+[data-theme="dark"] {
   --background-color: #222;
   --btn-color: #fff;
   --btn-text-color: #222;
@@ -20,6 +23,15 @@
   --footer-text-color: #bbb;
   --starfield-bg-color: #000; /* Dark mode background for Starfield */
   --star-color: #fff; /* Dark mode star color */
+  --card-color: rgba(22, 22, 23, 0.733);
+  --git-img-bg-color: black;
+  --gitbg-color: black;
+}
+
+[data-theme="light"] {
+  --git-img-bg-color: transparent;
+  --star-color: #000; /* Light mode star color */
+  --gitbg-color: rgb(255, 255, 255);
 }
 
 body {
@@ -47,7 +59,7 @@ p {
 h2,
 h3,
 p {
-  font-family: 'Roboto Mono', monospace;
+  font-family: "Roboto Mono", monospace;
 }
 
 h1,
@@ -61,7 +73,7 @@ h3 {
 }
 
 h1 {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   font-size: 32px;
 }
 
@@ -84,7 +96,7 @@ p {
   /* additional Starfield-specific styles here */
 }
 
-@media (width >= 800px) {
+@media (min-width: 800px) {
   #root {
     gap: 100px;
   }
@@ -104,7 +116,7 @@ p {
   }
 }
 
-@media (width >= 1400px) {
+@media (min-width: 1400px) {
   #root {
     gap: 200px;
   }
